fixed spacing on latest blog page, need to correct for extended right margin

--- a/src/components/pages/Blog/blogStyle.css
+++ b/src/components/pages/Blog/blogStyle.css
@@ -9,3 +9,10 @@
     border: 1px solid rgba(0, 0, 0, 0.125);
     border-radius: 0.25rem;
 }
+
+.cover {
+    object-fit: cover;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+  }
